Fix long url multi-line overflow in source instance editing

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
@@ -106,6 +106,7 @@ fieldset.box {
       overflow: hidden;
       text-overflow: ellipsis;
       vertical-align: middle;
+      white-space: nowrap;
   }
 
   .extendedGroup {
